Fixed OpenAPI schema
